# powerflex-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: seed_data.py
api/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
