[tool.poetry]
name = "powerflex-challenge"
version = "0.1.0"
description = "Challenge for Powerflex dev position"
authors = ["Jaime Jaramillo <jaimedario88@gmail.com>"]
readme = "README.md"
packages = [{ include = "powerflex_challenge" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.3" }
djangorestframework-stubs = { extras = [
    "compatible-mypy",
], version = "^3.14.2" }

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
